--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,12 @@
-baseurl = "https://pages.gitlab.io/hugo/"
+baseurl = "https://jpservices-static.pages.dev/"
 contentdir    = "content"
 layoutdir     = "layouts"
 publishdir    = "public"
-title = "Beautiful Hugo"
+title = "JP Services"
 canonifyurls  = true
 
 DefaultContentLanguage = "en"
+
 theme = "beautifulhugo"
 metaDataFormat = "yaml"
 pygmentsUseClasses = true
