--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ pygmentCodeFences = true
 #googleAnalytics = "XXX"
 
 [Params]
-  subtitle = "Chimney Cleaning and Camera Inspections"
+  subtitle = "Chimney Cleaning 🧹 Camera Inspections 📸"
   logo = "img/avatar-icon.png"
   favicon = "img/favicon.ico"
   dateFormat = "January 2, 2006"
