--- a/config.toml
+++ b/config.toml
@@ -36,7 +36,7 @@ pygmentCodeFences = true
 
 [Author]
   name = "John Powell"
-  email = "john [at] jpservices.ie"
+  email = "john@jpservices.ie"
 
 [[menu.main]]
     name = "Sweep"
