--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,6 @@ contentdir    = "content"
 layoutdir     = "layouts"
 publishdir    = "public"
 title = "JP Services"
-description = "Chimney Camera Inspection and Chimney Cleaning. Sligo Mayo Roscommon Leitrim"
 canonifyurls  = true
 
 DefaultContentLanguage = "en"
@@ -17,6 +16,8 @@ pygmentCodeFences = true
 
 [Params]
   subtitle = "Chimney Cleaning 🧹 Camera Inspection 📸"
+  longtitle = "JP Services, Chimney Inspection and Cleaning"
+  description = "Chimney Cleaning, Chimney Camera Inspection, Sligo, Mayo, Roscommon, Leitrim"
   logo = "img/avatar-icon.png"
   favicon = "img/favicon.ico"
   dateFormat = "January 2, 2006"
