--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ pygmentCodeFences = true
 
 [Params]
   subtitle = "Chimney Cleaning 🧹 Camera Inspection 📸"
-  longtitle = "JP Services, Chimney Inspection and Cleaning"
+  longtitle = "JP Services, Chimney Camera Inspection and Cleaning"
   description = "Chimney Cleaning, Chimney Camera Inspection, Sligo, Mayo, Roscommon, Leitrim"
   logo = "img/avatar-icon.png"
   favicon = "img/favicon.ico"
