--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ pygmentCodeFences = true
 [Params]
   subtitle = "Chimney Cleaning 🧹 Camera Inspection 📸"
   longtitle = "JP Services, Chimney Camera Inspection and Cleaning"
-  description = "Chimney Cleaning, Chimney Camera Inspection, Sligo, Mayo, Roscommon, Leitrim"
+  description = "Chimney Cleaning, Chimney Camera Inspection, Chimney Repair, Sligo, Mayo, Roscommon, Leitrim"
   logo = "img/avatar-icon.png"
   favicon = "img/favicon.ico"
   dateFormat = "January 2, 2006"
